some translation added

--- a/MVC.App/Resources/SharedResource.en-GB.resx
+++ b/MVC.App/Resources/SharedResource.en-GB.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="backToForm" xml:space="preserve">
+    <value>Back to form</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>Email</value>
+  </data>
+  <data name="home" xml:space="preserve">
+    <value>Home</value>
   </data>
   <data name="homePage" xml:space="preserve">
     <value>Home page</value>
@@ -128,6 +134,9 @@
   </data>
   <data name="save" xml:space="preserve">
     <value>Save</value>
+  </data>
+  <data name="users" xml:space="preserve">
+    <value>Users</value>
   </data>
   <data name="welcome" xml:space="preserve">
     <value>Welcome</value>
