--- a/MVC.App/Resources/SharedResource.pl-PL.resx
+++ b/MVC.App/Resources/SharedResource.pl-PL.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="backToForm" xml:space="preserve">
+    <value>Wróć do formy</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>Mail</value>
   </data>
   <data name="EmailRequired" xml:space="preserve">
     <value>Pole jest obowiązkowe</value>
+  </data>
+  <data name="home" xml:space="preserve">
+    <value>Główna</value>
   </data>
   <data name="homePage" xml:space="preserve">
     <value>Strona główna</value>
@@ -134,6 +140,9 @@
   </data>
   <data name="save" xml:space="preserve">
     <value>Zapisz</value>
+  </data>
+  <data name="users" xml:space="preserve">
+    <value>Użytkownicy</value>
   </data>
   <data name="welcome" xml:space="preserve">
     <value>Witaj</value>
